--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/lalo1898developer/sps-practica1/issues"
   },
-  "homepage": "https://github.com/lalo1898developer/sps-practica1#readme"
+  "homepage": "https://github.com/lalo1898developer/sps-practica1#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
+  }
 }
