--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Practica #1 para entrar a la consultora SPS",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
+    "dev": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
